# SDL-OpenGL-Game

./: CMakeLists.txt
UntitledGame/: CMakeLists.txt  main.cpp
UntitledGame/assets/: basic.frag  basic.vert
UntitledGame/core/: game.cpp  game.h  input.h  platform.h  services.cpp  services.h  window.h  world.h
UntitledGame/platform/gl/: glbuffer.cpp  glrenderer.cpp  glrenderer.h  glshader.cpp  gltexture.cpp
UntitledGame/platform/sdl/: sdlcontext.h  sdlinput.cpp  sdlinput.h  sdlkeyboard.cpp  sdlmouse.cpp  sdlplatform.cpp  sdlplatform.h  sdlwindow.cpp  sdlwindow.h
UntitledGame/renderer/: camera.h  camerabehavior.cpp  camerabehavior.h  mesh.h  renderer.h  resourcemanager.cpp  texture.cpp
